# xfce4-windowck-plugin

./: .gitignore  Makefile.am  NEWS  README.md  configure.ac  configure.ac.in  meson.build  reloadPlugins.sh
common/: Makefile.am  meson.build  mypixmap.h  theme.h  ui_style.c  ui_style.h  wck-plugin.c  wck-plugin.h  wck-utils.c  wck-utils.h
debian/: control  copyright
icons/: Makefile.am  meson.build
icons/48x48/: Makefile.am
panel-plugin/: Makefile.am  meson.build
panel-plugin/buttons/: Makefile.am  meson.build  theme.c  wckbuttons-dialogs.c  wckbuttons-dialogs.glade  wckbuttons-dialogs.gresource.xml  wckbuttons-dialogs.h  wckbuttons-theme.c  wckbuttons-theme.h  wckbuttons.c  wckbuttons.desktop.in  wckbuttons.h
panel-plugin/menu/: Makefile.am  meson.build  wckmenu-dialogs.c  wckmenu-dialogs.glade  wckmenu-dialogs.gresource.xml  wckmenu-dialogs.h  wckmenu-icon.c  wckmenu-icon.h  wckmenu-plugin.desktop.in  wckmenu.c  wckmenu.desktop.in  wckmenu.h
panel-plugin/title/: Makefile.am  meson.build  ui_style.h  wcktitle-dialogs.c  wcktitle-dialogs.glade  wcktitle-dialogs.gresource.xml  wcktitle-dialogs.h  wcktitle-title.c  wcktitle-title.h  wcktitle.c  wcktitle.desktop.in  wcktitle.h  windowck-dialogs.c  windowck-dialogs.glade  windowck-dialogs.h  windowck-title.c  windowck-title.h  windowck.c  windowck.h
po/: LINGUAS  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fr.po  gl.po  he.po  hr.po  ie.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  ru_RU.po  sk.po  sl.po  sq.po  sr.po  sv.po  th.po  (+5 more)
themes/: Makefile.am  generator_common.py  generator_xfwm4.py  meson.build  unity.mk  xfwm4.mk  xpm2png.py
themes/windowck-dark/: Makefile.am  meson.build
themes/windowck-dark/unity/: Makefile.am  generator.py  meson.build
themes/windowck-dark/xfwm4/: Makefile.am  generator.py  meson.build
themes/windowck/unity/: Makefile.am  generator.py  meson.build
themes/windowck/xfwm4/: Makefile.am  generator.py  meson.build
